--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,6 @@ body{
     background-color: #222;
     color: white;
     text-align: center;
+    font-family: 'Caveat', cursive;
+    font-size: 1.5rem;
 }
