--- a/src/components/layout/Card.css
+++ b/src/components/layout/Card.css
@@ -2,8 +2,8 @@
     border-radius: 5px;
     overflow: hidden;
     border: 5px solid;
-    font-family: 'Caveat', cursive;
-    font-size: 1.5rem;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1rem;
     margin: 15px;
 
     display: flex;
