--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,6 @@ body{
     background-color: #222;
     color: white;
     text-align: center;
-    font-family: 'Caveat', cursive;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 1.5rem;
 }
